<resources>
    <string name="app_name">Glagol</string>
    <string name="search_hint">Поиск</string>
    <string name="login">Зарегистрироваться</string>
    <string name="alredy">Я уже зарегестрирован</string>
    <string name="login_for">Для доступа в личный кабинет требуется регистрация в приложении</string>
    <string name="sign_in">Войти под своим логином и паролем</string>
    <string name="text_enter_mail">Укажите свой e-mail</string>
    <string name="example_mail">example@gmail.com</string>
    <string name="text_info_registration">Регистрация необходима для совершения покупок, синхронизации личного кабинета на разных устройствах и восстановления доступа к приложению</string>
    <string name="text_mail_pass">Укажите свой e-mail и пароль</string>
    <string name="text_info_login">Укажите пароль, который был отправлен на ваш e-mail после регистрации</string>
    <string name="button_login">Войти</string>
    <string name="send_pass">Выслать пароль еще раз</string>
    <string name="res_pass">Вам будет отправлен новый пароль</string>
    <string name="get_pass">Получить пароль</string>
    <string name="news">Здесь будут отображаться новинки по Вашим подпискам (доступно после регистрации). \n
    \n
    В приложении можно подписаться на: \n
    - новинки автора \n
        - новинки чтеца \n
        - новики издательства \n
        - новинки в подборах книг
    </string>
    <string name="selection">Вы еще не оформили ни одну подписку (доступно после регистрации). \n
    \n
    В приложении можно подписаться на: \n
    - новинки автора \n
        - новинки чтеца \n
        - новики издательства \n
        - новинки в подборах книг
    </string>

    <string name="recover">Востановить доступ</string>
    <string name="info_app">О приложении</string>
    <string name="question">Задать вопрос</string>
    <string name="contact">Контакты</string>

    <string name="text_payment">Данные банковской карты</string>
    <string name="number">Номер</string>
    <string name="period">Срок</string>
    <string name="user_name">Имя</string>
    <string name="cvc">CVC/CVV</string>

    <string name="hint_number">1234 1234 1234 1234</string>
    <string name="hint_period">ДД/ГГ</string>
    <string name="hint_user_name">Ivanov Ivan</string>
    <string name="hint_cvc">123</string>

    <string name="info_cvc">CVC/CVV - последние три цифры на обратной стороне вашей карты</string>
    <string name="text_button">Оплатить</string>
    <string name="description">Мы сохраним данные карты на вашем смартфоне. При следующих покупках вводить данные не потребуется. \n\n
    Платеж будет зщищен и обработан сервисом Яндекс.Касса</string>


    <string-array name="nav_drawer_icons">
        <item>@mipmap/theatre</item>
        <item>@mipmap/teacher_briefcase</item>
        <item>@mipmap/loupe</item>
        <item>@mipmap/puzzle</item>
        <item>@mipmap/family_room</item>
        <item>@mipmap/globe_grid</item>
        <item>@mipmap/language</item>
        <item>@mipmap/mirror</item>
        <item>@mipmap/teacher_pointing_at_blackboard</item>
        <item>@mipmap/ufo</item>
        <item>@mipmap/castle</item>
        <item>@mipmap/laughing</item>
        <item>@mipmap/gavel</item>
        <item>@mipmap/baseball_cap</item>
        <item>@mipmap/church</item>
        <item>@mipmap/kremlin</item>
    </string-array>


    <string-array name="nav_drawer_items">
        <item>Аудиоспектакли</item>
        <item>Бизнес-книги</item>
        <item>Детективы</item>
        <item>Для детей</item>
        <item>Дом и семья</item>
        <item>Зарубежная проза</item>
        <item>Иностранные языки</item>
        <item>Красота и здоровье</item>
        <item>Учебная литература</item>
        <item>Фантастика</item>
        <item>Фентези</item>
        <item>Юмор и развлечения</item>
        <item>Юредическая литература</item>
        <item>Подростковая литература</item>
        <item>Религиозная литература</item>
        <item>Политика</item>
    </string-array>

</resources>
