<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_margin="15dp"
        android:id="@+id/text"
        android:text="@string/text_payment"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line1"
        android:layout_below="@+id/text"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/content_line1"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_number"
            android:textColor="#FFFFFF"
            android:text="@string/number"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enter_number"
            android:textColor="#FFFFFF"
            android:textColorHint="#6e6e6e"
            android:background="@android:color/transparent"
            android:hint="@string/hint_number"
            android:inputType="number"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line2"
        android:layout_below="@+id/content_line1"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/content_line2"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@+id/line2">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_period"
            android:textColor="#FFFFFF"
            android:text="@string/period"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enter_period"
            android:background="@android:color/transparent"
            android:hint="@string/hint_period"
            android:textColorHint="#6e6e6e"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line3"
        android:layout_below="@+id/content_line2"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/content_line3"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@+id/line3">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_name"
            android:textColor="#FFFFFF"
            android:text="@string/user_name"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enter_name"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF"
            android:textColorHint="#6e6e6e"
            android:hint="@string/hint_user_name"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line4"
        android:layout_below="@+id/content_line3"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/content_line4"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@+id/line4">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_cvc"
            android:textColor="#FFFFFF"
            android:text="@string/cvc"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enter_cvc"
            android:background="@android:color/transparent"
            android:hint="@string/hint_cvc"
            android:textColorHint="#6e6e6e"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line5"
        android:layout_below="@+id/content_line4"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_cvc"
        android:textColor="#6e6e6e"
        android:layout_below="@+id/line5"
        android:layout_margin="15dp"
        android:text="@string/info_cvc"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buy"
        android:layout_below="@+id/info_cvc"
        android:layout_margin="15dp"
        android:textColor="#6e6e6e"
        android:background="@drawable/background"
        android:text="@string/text_button"
        android:textAllCaps="false"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_margin="15dp"
        android:layout_below="@+id/buy"
        android:textColor="#6e6e6e"
        android:text="@string/description"
        android:gravity="center"/>


</RelativeLayout>
    </ScrollView>