<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp"
        android:id="@+id/text"
        android:text="@string/text_enter_mail"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line1"
        android:layout_below="@+id/text"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter_mail"
        android:background="@android:color/transparent"
        android:layout_below="@+id/line1"
        android:textColorHint="#6e6e6e"
        android:layout_margin="15dp"
        android:hint="@string/example_mail"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line2"
        android:layout_below="@+id/enter_mail"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_info"
        android:layout_below="@+id/line2"
        android:layout_margin="15dp"
        android:gravity="center"
        android:textColor="#646464"
        android:text="@string/text_info_registration"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign"
        android:layout_below="@+id/text_info"
        android:layout_margin="15dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/background"
        android:text="@string/login"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_below="@+id/sign"
        android:layout_margin="15dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/backsearch"
        android:text="@string/sign_in"
        />





</RelativeLayout>