<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="80dp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp"
        android:id="@+id/text"
        android:text="@string/text_mail_pass"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line1"

        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter_mail"
        android:background="@android:color/transparent"
        android:textCursorDrawable="@drawable/cursor"
        android:textColor="#FFFFFF"
        android:layout_margin="15dp"
        android:hint="@string/example_mail"
        android:textColorHint="#6e6e6e"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line2"

        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter_password"
        android:textColor="#FFFFFF"
        android:inputType="textPassword"
        android:background="@android:color/transparent"
        android:textCursorDrawable="@drawable/cursor"
        android:layout_margin="15dp"
        android:hint="*****"
        android:textColorHint="#6e6e6e"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line3"

        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_info"

        android:layout_margin="15dp"
        android:gravity="center"
        android:textColor="#646464"
        android:text="@string/text_info_login"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"

        android:layout_margin="15dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/background"
        android:text="@string/button_login"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/send_mail"
        android:layout_margin="15dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/backsearch"
        android:text="@string/send_pass"
        />

</LinearLayout>