<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <RelativeLayout
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp"
        android:id="@+id/text"
        android:text="@string/text_enter_mail"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line1"
        android:layout_below="@+id/text"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter_mail"
        android:background="@android:color/transparent"
        android:textColor="#FFFFFF"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:layout_below="@+id/line1"
        android:textCursorDrawable="@drawable/cursor"
        android:layout_margin="15dp"
        android:textColorHint="#6e6e6e"
        android:hint="@string/example_mail"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line2"
        android:layout_below="@+id/enter_mail"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_info"
        android:layout_below="@+id/line2"
        android:layout_margin="15dp"
        android:gravity="center"
        android:textColor="#646464"
        android:text="@string/res_pass"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/get_pass"
        android:layout_below="@+id/text_info"
        android:layout_margin="15dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/background"
        android:text="@string/get_pass"
        />
</RelativeLayout>
</RelativeLayout>