<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/line1"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:background="#FFFFFF"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/content_line1"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/recover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_recover"
            android:textColor="#707070"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/back_icon"
            android:id="@+id/image_recover"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/line2"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:background="#FFFFFF"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/content_line2"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/info_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_info"
            android:textColor="#707070"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/back_icon"
            android:id="@+id/image_info"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/line3"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:background="#FFFFFF"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/content_line3"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_question"
            android:textColor="#707070"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/back_icon"
            android:id="@+id/image_question"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/line4"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:background="#FFFFFF"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/content_line4"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_contact"
            android:textColor="#707070"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/back_icon"
            android:id="@+id/image_contact"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/line5"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:background="#FFFFFF"
        android:layout_height="1dp"/>

</LinearLayout>